--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   pull_to_refresh: ^2.0.0
-
+  refresh_loadmore: ^2.0.5
+  liquid_pull_to_refresh: ^3.0.1
 dev_dependencies:
   flutter_driver:
     sdk: flutter
